[gd_scene load_steps=7 format=3 uid="uid://bhu1vnfq82ex4"]

[ext_resource type="Script" path="res://Foe.gd" id="1_ybyg4"]
[ext_resource type="PackedScene" uid="uid://bxswa1i4ft2xs" path="res://component/melee_weapon.tscn" id="2_0cui2"]
[ext_resource type="Texture2D" uid="uid://di8ha6ppvagus" path="res://icon.svg" id="2_3r14v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oionb"]
size = Vector2(128, 127)

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_pbj80"]
points = PackedVector2Array(500, -500, 0, -700, -500, -500, 0, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_0vx3c"]
radius = 27.4591

[node name="Foe" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_ybyg4")

[node name="MeleeWeapon" parent="." instance=ExtResource("2_0cui2")]
mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_oionb")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_3r14v")

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource("ConvexPolygonShape2D_pbj80")

[node name="AttackDelayTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackRepositionTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="SpotDelayTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -68)
shape = SubResource("CircleShape2D_0vx3c")

[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_detect_area_body_exited"]
[connection signal="timeout" from="AttackDelayTimer" to="." method="_change_state_attacking"]
[connection signal="timeout" from="AttackRepositionTimer" to="." method="_on_attack_reposition_timer_timeout"]
[connection signal="timeout" from="SpotDelayTimer" to="." method="_on_spot_delay_timer_timeout"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
